# pyzxing

./: .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGES  CLAUDE.md  MANIFEST.in  README.md  README_CN.md  README_EN.md  RELEASING.md  pyproject.toml  requirements.txt  scanner.py  setup.py
.github/workflows/: build-jar.yml  ci-cd.yml  prepare-runner.yml  publish-conda.yml  publish-release.yml  python-publish.yml
conda-recipe/: meta.yaml
docs/: api.rst  conf.py  deployment.rst  development.rst  index.rst  installation.rst  quickstart.rst  results.rst  troubleshooting.rst  usage.rst
java-runner/: pom.xml
java-runner/src/main/java/io/github/chenjiexu/pyzxing/: PyzxingRunner.java
java-runner/src/test/java/io/github/chenjiexu/pyzxing/: PyzxingRunnerTest.java
java-runner/src/test/resources/fixtures/gb18030/: README.md  metadata.json
pyzxing/: __init__.py  __version__.py  config.py  meta.yaml  platform_utils.py  reader.py  utils.py
reports/: issue-34-gb18030.json  issue-35-assessment.json  issue-38-zxing-comparison.json
scripts/: build_and_release.sh  build_jar.bat  build_jar.sh  export_test_runner.py  install_conda_runner.py  prepare_conda_local_recipe.py  pyinstaller_smoke.py  scanner.py  verify_release_evidence.py  verify_runner_artifact.py  verify_runner_release.py  verify_version_sync.py  version_sync.py  webcam_demo.py
src/: .travis.yml  setup.py  test_barcode.py  test_create_reader.py  test_decode.py
src/resources/: multibarcodes.txt
test/: barcode_test.py
tests/: conftest.py  test_create_reader.py  test_decode.py  test_edge_cases.py  test_issue_regressions.py  test_performance.py  test_reader_runtime.py  test_webcam_demo.py
tests/resources/data-matrix/: metadata.json
